--- a/src/app/shell/titlebar.component.css
+++ b/src/app/shell/titlebar.component.css
@@ -1,6 +1,10 @@
 header {
-  height: 32px;
+  height: env(titlebar-area-height, 0px);
+  width: env(titlebar-area-width, 0px);
   display: flex;
+  position: relative;
+  top: 0;
+  margin: -8px;
   align-items: center;
   padding: 0 12px;
   background: #0f172a;
